# sam3-tvm

./: .gitignore  .gitmodules  AGENTS.md  README.md  TODOs.md  pyproject.toml
NOTES/: BOOLEAN_PARAMETER_INVESTIGATION.md  GEOMETRY_ENCODER_ANALYSIS.md  GEOMETRY_ENCODER_EXPORT_SUMMARY.md  RELATED-WORKS.md  RoPE_TVM_Investigation.md  SAM3_ANALYSIS.md  TVM_COMPILATION_ERROR_STRATEGIES.md  TVM_DEBUGGING_LESSONS.md  TVM_IMPORT_BLOCKER.md  VISION_BACKBONE_TRACING_SUMMARY.md
scripts/: README.md  build_tvm.sh  explore_model.py  export_decoder.py  export_geometry_encoder.py  export_image_encoder.py  export_scoring_head.py  export_segmentation_head.py  export_transformer_encoder.py  export_vision_backbone.py  integration_test.py  integration_test_debug.py  manual_attention.py  mock_setup.py  patch_rope.py  patch_vitdet.py  reproduce_complex64.py  reproduce_roi_align.py  reproduce_scatter_src.py  tvm_custom_ops.py  verify_components.py
tests/: test_basic.py
