[project]
name = "sam3-tvm"
version = "0.1.0"
description = "SAM3 TVM integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sam3_tvm"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
sam3-tvm = { path = ".", editable = true }
pytest = "*"

[tool.pixi.tasks]
test = "pytest"
